# vctools

./: Cargo.toml  LICENSE  README.md  TODO.md
diff-modulo-base/: Cargo.toml  README.md
diff-modulo-base/examples/: devtool.rs
diff-modulo-base/src/: cli.rs  diff.rs  diff_color.rs  git.rs  git_core.rs  lib.rs  utils.rs
diff-modulo-base/src/diff/: buffer.rs  file.rs  file_match.rs  hunks.rs  reduce_changed.rs  render.rs
diff-modulo-base/src/tool/: gdmb.rs  mod.rs
diff-modulo-base/tests/: compose_test.rs  diff_test.rs  dmb_test.rs  gdmb_test.rs
diff-modulo-base/tests/compose_test/basic/: expected.diff
diff-modulo-base/tests/diff_test/basic/: expected.diff  new  old
diff-modulo-base/tests/diff_test/butterfly/: new  old
diff-modulo-base/tests/diff_test/llvm1/: expected.diff  old
diff-modulo-base/tests/diff_test/reverse_blocks1/: expected.diff  new  old
diff-modulo-base/tests/diff_test/reverse_blocks2/: old
diff-modulo-base/tests/diff_test/uninteresting1/: new
diff-modulo-base/tests/diff_test/uninteresting2/: new
diff-modulo-base/tests/diff_test/uninteresting3/: new
diff-modulo-base/tests/dmb_test/: update_expected.sh
diff-modulo-base/tests/dmb_test/basic1/: expected.diff  new.diff  old.diff  target.diff
diff-modulo-base/tests/dmb_test/llpc1/: expected.diff  new.diff  target.diff
diff-modulo-base/tests/dmb_test/llpc2-base-change-preserved/: old.diff
diff-modulo-base/tests/dmb_test/llpc3-base-change-dismissed/: expected.diff
diff-modulo-base/tests/dmb_test/llvm1/: expected.diff  new.diff  old.diff
diff-modulo-base/tests/gdmb_test/: update_expected.sh
diff-modulo-base/tests/gdmb_test/empties/: diff 33611ca4^..33611ca4  range-diff -s aa1a9e84..c704194d 08a6db44..33611ca4  show --no-patch 33611ca4  show --no-patch c704194d  test-cmdline  test-expected
diff-modulo-base/tests/gdmb_test/empty-range/: log --oneline 635345f4fe559f47743e2de54dd6fce42561c22c..dcbbe1be01596ea2cd2be20b51855dcad96abab1  merge-base main main  rev-parse dev  test-cmdline
diff-modulo-base/tests/gdmb_test/meta-only/: diff c704194d^..c704194d  test-expected
examples/: devtool.rs
git-forge-tui/: Cargo.toml  README.md
git-forge-tui/src/: config.rs  gitservice.rs  lib.rs  logview.rs
git-forge-tui/src/github/: api.rs  connections.rs  edit.rs  mod.rs
git-forge-tui/src/tui/: actions.rs  diff_pager.rs  inbox.rs  mod.rs  review.rs
git-review/: Cargo.toml  README.md
git-review-tui/: Cargo.toml
git-review/examples/: pager-demo.rs
git-review/src/: command.rs  connections.rs  github.rs  lib.rs  pager.rs  powerbar.rs  stringtools.rs
git-review/src/github/: mod.rs
src/: cli.rs  diff.rs  diff_color.rs  git.rs  git_core.rs  lib.rs  utils.rs
src/diff/: reduce_changed.rs
src/tool/: gdmb.rs
tests/: README.md  compose_test.rs  diff_test.rs  dmb_test.rs
tests/compose_test/: update_expected.sh
tests/compose_test/basic/: first.diff  second.diff
tests/diff_test/: update_expected.sh
tests/diff_test/butterfly/: expected.diff
tests/diff_test/llvm1/: new
tests/diff_test/reverse_blocks2/: expected.diff  new
tests/diff_test/reverse_blocks3/: expected.diff  new  old
tests/diff_test/uninteresting1/: expected.diff  old
tests/diff_test/uninteresting2/: expected.diff  old
tests/diff_test/uninteresting3/: expected.diff  old
tests/dmb_test/llpc1/: old.diff
tests/dmb_test/llpc2-base-change-preserved/: expected.diff  new.diff  target.diff
tests/dmb_test/llpc3-base-change-dismissed/: new.diff  old.diff  target.diff
tests/dmb_test/llvm1/: target.diff
tests/gdmb_test/empties/: test-expected
tests/gdmb_test/empty-range/: diff dcbbe1b^..dcbbe1b  show --no-patch dcbbe1b  test-expected
tests/gdmb_test/meta-only/: show --no-patch 33611ca4
vctools-utils/: Cargo.toml
vctools-utils/src/: files.rs  lib.rs  partition_point.rs  preamble.rs  prelude.rs
vctuik/: Cargo.toml
vctuik-unsafe-internals/: Cargo.toml
vctuik-unsafe-internals/src/: lib.rs  state.rs
vctuik-unsafe-internals/tests/ui/: lifetime_check.rs  lifetime_check.stderr
vctuik/examples/: demo.rs  maze.rs  pager-demo.rs  vctuik-demo.rs
vctuik/src/: check_box.rs  checkbox.rs  command.rs  event.rs  input.rs  label.rs  layout.rs  lib.rs  pager.rs  panes.rs  prelude.rs  section.rs  signals.rs  state.rs  stringtools.rs  terminal.rs  theme.rs  tree.rs
vctuik/src/pager/: cursor.rs  mod.rs  rich_source.rs  string_source.rs  widget.rs
vctuik/src/table/: mod.rs  simple_table.rs  widget.rs
