[package]
name = "git-review-tui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
octocrab = "0.39.0"
ratatui = { version = "0.28.1", features = [] }
serde = "1.0.210"
serde_json = "1.0.128"
tui-input = "0.10.1"
vctools-utils = { path = "../vctools-utils" }
