[package]
name = "git-review-tui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
log = "0.4.22"
octocrab = "0.39.0"
ratatui = { version = "0.28.1", features = [] }
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = "1.0.210"
serde_json = "1.0.128"
tui-input = "0.10.1"
tui-logger = "0.13.2"
tui-tree-widget = "0.22.0"
vctools-utils = { path = "../vctools-utils" }
