[package]
name = "git-review"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diff-modulo-base = { path = "../diff-modulo-base" }
clap = { version = "3.2", features = ["derive"] }
directories = "6.0.0"
lazy_static = { version = "1.4" }
regex = { version = "1.7", default-features = false, features = ["std", "perf"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.3"
toml = "0.8"
