[package]
name = "vctuik"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities"]

[features]
default = ["input-widget"]
input-widget = ["dep:tui-input"]

[dependencies]
clap = { version = "3.2", features = ["derive"] }
itertools = "0.14"
ratatui = { version = "0.28.1", features = [] }
regex = { version = "1.7", default-features = false, features = ["std", "perf"] }
tui-input = { version = "0.10.1", optional = true }
unicode-segmentation = { version = "1.12" }
vctools-utils = { path = "../vctools-utils" }
vctuik-unsafe-internals = { path = "../vctuik-unsafe-internals" }

[dev-dependencies]
rand = { version = "0.8" }

[[example]]
name = "vctuik-demo"
